--- a/index.html
+++ b/index.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Merry Christmas Typescript/THREEJS/WebGL by Shravan</title>
-        <style>
-            body {
-                overflow: hidden;
-                margin: 0px;
-            }
-        </style>
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Merry Christmas Typescript/THREEJS/WebGL by Shravan</title>
+    <style>
+      body {
+        overflow: hidden;
+        margin: 0px;
+        position: relative;
+        cursor: pointer;
+      }
+      .info {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: goldenrod;
+        font-size: 36px;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        text-shadow: 0px 2px 10px gold;
+      }
+      .info span {
+        display: inline-block;
+        animation: anim 0.5s infinite alternate-reverse;
+      }
+      @keyframes anim {
+        to {
+          transform: scale(1.3);
+        }
+      }
+    </style>
+  </head>
 
-    <body>
-        <script type="module" src="bundle.js"></script>
-    </body>
+  <body>
+    <script type="module" src="bundle.js"></script>
+    <div class="info">Loading...</div>
+  </body>
 </html>
