--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
           transform: scale(1.3);
         }
       }
+      .hide {
+        display: none;
+      }
       .credits {
         position: absolute;
         bottom: 10px;
@@ -63,6 +66,6 @@
     <audio src="music.mp3" id="audio"></audio>
     <script type="module" src="bundle.js"></script>
     <div class="info">Loading...</div>
-    <button class="credits" id="credits">Credits :)</button>
+    <button class="credits hide" id="credits">Credits :)</button>
   </body>
 </html>
